# flaskgpt

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main_openai-api.yml
static/src/css/: input.css
templates/: index.html
