[project]
name = "flaskgpt"
version = "0.1.0"
description = "clone de chatGPT using flask"
authors = [
    {name = "Rickardo"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (==2.3.3)",
    "openai (==0.27.10)",
    "python-dotenv (==1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
